# py-wallet-toolbox

./: .gitignore  ADVANCED_FEATURES_PROGRESS.md  ALL_TESTS_FIXED_COMPLETE.md  BRC100_COMPLIANCE_STATUS.md  BRC100_FORMAT_COMPLETE_SUMMARY.md  BRC100_SESSION_COMPLETE.md  CHANGELOG.md  COMPLETE_COMPARISON_ALL_TESTS.md  COMPREHENSIVE_FINAL_STATUS.md  COVERAGE_IMPROVEMENT_2024.md  COVERAGE_IMPROVEMENT_PLAN.md  COVERAGE_IMPROVEMENT_SUMMARY.md  CREATE_ACTION_UTXO_ISSUE.md  DETERMINISTIC_FIXTURES_ASSESSMENT.md  DETERMINISTIC_FIXTURES_FINAL_REPORT.md  E2E_TEST_PLAN.md  EXECUTIVE_SUMMARY.md  EXTENDED_SESSION_SUMMARY.md  FAILED_TESTS_SUMMARY.md  FAILING_TESTS.md  FEATURE_COMPARISON.md  FINAL_ADVANCED_FEATURES_COMPLETE.md  FINAL_BRC100_PROGRESS.md  FINAL_COVERAGE_REPORT.md  FINAL_RESULTS.md  FINAL_SESSION_REPORT.md  FINAL_SESSION_RESULTS.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS_EFFICIENT_PATH.md  FINAL_TEST_FIX_SUMMARY.md  FINAL_TEST_STATUS_REPORT.md  FINAL_UNSKIP_REPORT.md  FIRST_FAILURE_REPORT.md  FULL_SUITE_FAILURE_REPORT.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SESSION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MISSING_FUNCTIONALITY_MODULES.md  (+70 more)
.github/workflows/: build.yml
examples/: __init__.py  monitor_demo.py
examples/DEPRECATED_examples_from_go/: README.md  sync_local_to_remote.py
examples/brc100_wallet_demo/: .gitignore  MAINNET_GUIDE.md  README.md  STORAGE_GUIDE.md  env.example  requirements.txt  test_all_28_methods.py  wallet_demo.py  wallet_test.db
examples/django_server/: README.md  django_admin.sqlite3  manage.py  requirements.txt  wallet_storage.sqlite3
examples/e2e_simple_example/: README.md  e2e_two_party_roundtrip.py
examples/from_go/: .gitignore  __init__.py  requirements.txt  server_wallet.db  storage_server.py  wallet.db
examples/simple_wallet_example/: check_balance.py  diagnose_auth.py  faucet_internalize_and_create_action.py  investigate_auth_bug.py  split_utxos.py  test_all_28_methods.py
examples/storage_server_example/: requirements.txt
manual_tests/: README.md
manual_tests/integration/: test_wallet_storage_manager.py
manual_tests/services/: test_arc.py  test_get_beef_for_transaction.py
manual_tests/storage/: test_admin_stats.py  test_database_backends.py
manual_tests/wallet/: test_backup.py  test_local_wallet.py  test_mountaintop.py  test_req_error_review.py  test_spec_ops.py  test_wallet_live.py
src/bsv_wallet_toolbox/: __init__.py  auth_fetch.py  certificate.py  local_kv_store.py  private_key.py  services.py  single_writer_multi_reader_lock.py  types.py  wallet.py
tests/: __init__.py  conftest.py  test_auth_fetch.py  test_edge_cases.py  test_swmr_lock_coverage.py  test_utils.py
tests/abi/: test_serializer.py
tests/authentication/: test_authentication_coverage.py
tests/brc29/: test_brc29_address.py  test_brc29_template.py
tests/certificates/: test_certificate_life_cycle.py
tests/chaintracker/: test_bulk_file_data_manager_expanded.py  test_bulk_ingestor_woc_expanded.py  test_cdn_reader_expanded.py  test_chaintracks_coverage.py
tests/chaintracks/: test_chain_tracker.py  test_chaintracks.py  test_client_api.py  test_e2e.py  test_fetch.py  test_service_client.py
tests/constants/: test_constants_coverage.py
tests/entities/: test_entities_coverage.py
tests/errors/: test_action_error.py  test_errors_coverage.py
tests/fixtures/: __init__.py  certificate_fixtures.py  output_fixtures.py  transaction_fixtures.py  universal_vector_fixtures.py
tests/integration/: __init__.py  test_bulk_file_data_manager.py  test_bulk_ingestor_cdn_babbage.py  test_create_action_json_match.py  test_cwi_style_wallet_manager.py  test_internalize_create_process.py  test_local_kv_store.py  test_privileged_key_manager.py  test_signature_compatibility.py  test_single_writer_multi_reader_lock.py
tests/manager/: __init__.py  conftest.py  test_cwi_manager_coverage.py  test_cwi_manager_coverage.py.backup  test_managers_expanded_coverage.py  test_simple_manager_coverage.py  test_wallet_interface.py  test_wallet_permissions_manager_identity.py  test_wallet_settings_manager.py
tests/models/: test_models_coverage.py
tests/monitor/: __init__.py  test_live_ingestor_whats_on_chain_poll.py  test_monitor.py  test_monitor_daemon.py  test_tasks.py
tests/permissions/: conftest.py  test_permissions_coverage.py  test_permissions_protocols_coverage.py  test_wallet_permissions_manager_callbacks.py  test_wallet_permissions_manager_checks.py  test_wallet_permissions_manager_encryption.py  test_wallet_permissions_manager_flows.py  test_wallet_permissions_manager_initialization.py  test_wallet_permissions_manager_missing_coverage.py  test_wallet_permissions_manager_proxying.py  test_wallet_permissions_manager_tokens.py
tests/rpc/: __init__.py  test_json_rpc_client_coverage.py  test_json_rpc_server_coverage.py  test_storage_client_coverage.py  test_storage_server_coverage.py
tests/services/: conftest.py  test_arc_provider_coverage.py  test_arc_services.py  test_bitails_provider_coverage.py  test_bitails_provider_expanded.py  test_cache_manager_coverage.py  test_exchange_rates.py  test_get_chain_tracker.py  test_get_merkle_path.py  test_get_raw_tx.py  test_get_script_history_min.py  test_get_utxo_status_min.py  test_post_beef.py  (+16 more)
(+376 files in other folders)
